--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <div class="project-info">
             <h1>Project 1</h1>
             <h2>Web Wedding</h2>
-            <p>This is website wedding using html & css</p>
+            <p>This website wedding using html & css</p>
           <a href="https://lamsyyy.github.io/wedding.html" class="wedding"> Click Here </a>
           </div>
           <div class="project-img">
@@ -91,7 +91,7 @@
           <div class="project-info">
             <h1>Project 2</h1>
             <h2>CRUD</h2>
-            <p>This is website display from CRUD using PHP</p>
+            <p>This website display from CRUD using PHP</p>
             <a href="http://localhost/crud/" class="wedding">Click Here</a>
           </div>
           <div class="project-img">
@@ -102,13 +102,33 @@
           <div class="project-info">
             <h1>Project 3</h1>
             <h2>CRUD Laravel</h2>
-            <p>this is website product CRUD using Laravel</p>
+            <p>this website product CRUD using Laravel</p>
             <a href="http://127.0.0.1:8000/products" class="wedding">Click Here</a>
           </div>
           <div class="project-img">
             <img src="./img/laravel-crud.png" alt="img">
           </div>
         </div>
+        <div class="project-item">
+          <div class="project-info">
+            <h1>Project 4</h1>
+            <h2>FIGMA</h2>
+            <p>this is project figma</p>
+            <a href="http://127.0.0.1:8000/products" class="wedding"></a>
+          </div>
+          <div class="project-img">
+            <img src="img/figma.png" alt="img">
+          </div></div>
+          <div class="project-item">
+          <div class="project-info">
+            <h1>Project 5</h1>
+            <h2>FORM LOGIN</h2>
+            <p>this is form login</p>
+            <a href="http://localhost/form%20register/register.php" class="wedding"> Click here</a>
+          </div>
+          <div class="project-img">
+            <img src="img/form_login.png" alt="img">
+          </div>
   </section>
   <!-- End Projects Section -->
 
